--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bayanihan-dir",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://chcepe.github.io/bayanihan-dir",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
