--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook": "^8.1.4",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
